[project]
name = "garmin-server"
version = "0.1.0"
description = "Local API server to fetch Garmin Connect activities"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "garth>=0.4.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
